--- a/vizsgaremek_palyakovetes/backend/server/package.json
+++ b/vizsgaremek_palyakovetes/backend/server/package.json
@@ -1,11 +1,14 @@
 {
+  "type": "module",
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
+  
   "author": "",
   "license": "ISC",
   "description": "",
