--- a/vizsgaremek_palyakovetes/frontend/package.json
+++ b/vizsgaremek_palyakovetes/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.3.4",
     "cookie-parser": "^1.4.6",
     "file-saver": "^2.0.5",
+    "papaparse": "^5.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
