--- a/vizsgaremek_palyakovetes/backend/server/package.json
+++ b/vizsgaremek_palyakovetes/backend/server/package.json
@@ -15,7 +15,9 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
