--- a/vizsgaremek_palyakovetes/frontend/package.json
+++ b/vizsgaremek_palyakovetes/frontend/package.json
@@ -47,5 +47,10 @@
   },
   "devDependencies": {
     "react-router-dom": "^6.8.0"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
   }
 }
