--- a/vizsgaremek_palyakovetes/backend/server/package.json
+++ b/vizsgaremek_palyakovetes/backend/server/package.json
@@ -19,8 +19,8 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.20",
+    "mysql2": "^3.10.3",
+    "nodemon": "^3.1.4",
     "react-router-dom": "^6.8.2"
   }
 }
