--- a/vizsgaremek_palyakovetes/backendv2/package.json
+++ b/vizsgaremek_palyakovetes/backendv2/package.json
@@ -22,6 +22,7 @@
 		"express-rate-limit": "^7.3.1",
 		"helmet": "^7.1.0",
 		"http-status-codes": "^2.3.0",
+		"jest": "^29.7.0",
 		"jsonwebtoken": "^9.0.2",
 		"morgan": "^1.10.0",
 		"nodemon": "^3.1.4",
