--- a/vizsgaremek_palyakovetes/frontend/package.json
+++ b/vizsgaremek_palyakovetes/frontend/package.json
@@ -17,11 +17,14 @@
     "@mui/x-data-grid": "^7.11.0",
     "axios": "^1.7.2",
     "file-saver": "^2.0.5",
+    "formik": "^2.4.6",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
-    "web-vitals": "^4.2.2"
+    "react-toastify": "^10.0.5",
+    "web-vitals": "^4.2.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
