--- a/vizsgaremek_palyakovetes/backend/package.json
+++ b/vizsgaremek_palyakovetes/backend/package.json
@@ -5,7 +5,8 @@
 	"main": "app.js",
 	"scripts": {
 		"dev": "SET NODE_ENV=development&& nodemon app.js",
-		"start": "SET NODE_ENV=production&& node app.js"
+		"start": "SET NODE_ENV=production&& node app.js",
+		"test": "npx jest"
 	},
 	"author": "hb3nce04",
 	"license": "ISC",
@@ -20,16 +21,18 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"express-rate-limit": "^7.3.1",
+		"express-validator": "^7.1.0",
 		"helmet": "^7.1.0",
 		"http-status-codes": "^2.3.0",
-		"jest": "^29.7.0",
 		"jsonwebtoken": "^9.0.2",
 		"morgan": "^1.10.0",
-		"nodemon": "^3.1.4",
-		"validator": "^13.12.0"
+		"nodemon": "^3.1.4"
 	},
 	"devDependencies": {
-		"prisma": "^5.17.0"
+		"cross-env": "^7.0.3",
+		"jest": "^29.7.0",
+		"prisma": "^5.17.0",
+		"supertest": "^7.0.0"
 	},
 	"prisma": {
 		"seed": "node prisma/seed.js"
