--- a/vizsgaremek_palyakovetes/backend/package.json
+++ b/vizsgaremek_palyakovetes/backend/package.json
@@ -26,10 +26,14 @@
 		"http-status-codes": "^2.3.0",
 		"jsonwebtoken": "^9.0.2",
 		"morgan": "^1.10.0",
-		"nodemon": "^3.1.4"
+		"nodemon": "^3.1.4",
+		"swagger-ui-express": "^5.0.1"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.8.0",
 		"cross-env": "^7.0.3",
+		"eslint": "^9.8.0",
+		"globals": "^15.9.0",
 		"jest": "^29.7.0",
 		"prisma": "^5.17.0",
 		"supertest": "^7.0.0"
